force-app/main/default/objects/Task__c/fields/Var1__c.field-meta.xml
<CustomField>
    <fullName>Var1__c</fullName>
    <label>Var1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>