force-app/main/default/objects/Task__c/fields/Var2__c.field-meta.xml
<CustomField>
    <fullName>Var2__c</fullName>
    <label>Var2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>