force-app/main/default/objects/Task__c/fields/Var3__c.field-meta.xml
<CustomField>
    <fullName>Var3__c</fullName>
    <label>Var3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>